syntax = "proto3";
package api;
import "common.proto";
import "userService.gen.proto";
import "google/api/annotations.proto";
option go_package = "pgo/api;api";

// 用户服务模块
service User {
    // 登录或注册，其实可以理解为只是通过用户账号密码新建一个token，用于其他接口鉴权
    rpc Login (LoginRequest) returns (LoginResponse) {
        option (google.api.http) = {
            post: "/user/token"
            body: "*"
        };
    }

    // 修改用户名
    rpc EditUserName (EditUserNameRequest) returns (Empty) {
        option (google.api.http) = {
            patch: "/user"
            body: "*"
        };
    }

    // 从部门中移除用户
    rpc DelUserDeptAssoc (DelUserDeptAssocRequest) returns (Empty) {
        option (google.api.http) = {
            delete: "/user-dept-assoc"
        };
    }
}

message LoginRequest {
    string userName = 1;
}

message LoginResponse {
    UserInfo user = 1;
    string token = 2;
}

message EditUserNameRequest {
    int32 ID = 1;
    string userName = 2;
}

message DelUserDeptAssocRequest {
    int32 userID = 1;
    int32 deptID = 2;
}